public static class StringRepo
{
    // Inputs
    public const string JumpButton = "Jump";
    public const string HorizontalInput = "Horizontal";
    public const string VerticalInput = "Vertical";
    public const string mouseX = "Mouse X";
    public const string mouseY = "Mouse Y";
    public const string mouse1 = "Fire1";  

    // Game objects
    public const string Bullet = "Bullet";
    public const string Player = "FirstPersonPlayer";

    // Animations
    public const string RunAnimation = "Run";
    public const string Attack1Animation = "Attack1";
    public const string Attack2Animation = "Attack2";
    public const string IdleAnimation = "Idle";
    public const string HitAnimation = "Hit";
    public const string DieAnimation = "Die";

    // Scenes
    public const string GameScene = "GameScene";
    public const string MainMenu = "MainMenu";   
}